Changed the bg lavender

--- a/style.css
+++ b/style.css
@@ -420,7 +420,6 @@ body {
     .page-home article:last-child {
       margin-bottom: 0px; }
 
-
 body{
-	background: pink;
+	background: lavender;
 }
